# scottySample

./: README.md
persistSample/: .gitignore  Main.hs  Main2.hs  persistSample.cabal
todoHaskell/: .gitignore  memo.md  todoHaskell.cabal
todoHaskell/src/: Main.hs
todoHaskell/src/Persist/: Memo.hs  Migration.hs
todoHaskell/src/Sample/: App.hs  Model.hs
