name:                persistSample
version:             0.0.1
synopsis:            My awesome todo-list app
license:             MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable todo
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.7.*
                     , text
                     , persistent
                     , persistent-template
                     , persistent-mysql
                     , persistent-sqlite
                     , transformers
                     , resourcet
                     , monad-logger
